force-app/main/default/objects/Case/fields/KDCE_OB_IssuerType__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_IssuerType__c</fullName>
    <label>고객 분류</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>진실된 불만 고객</fullName>
            </value>
            <value>
                <fullName>허위 진술자</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>