force-app/main/default/objects/Case/fields/KDCE_OB_LeadComment__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_LeadComment__c</fullName>
    <description>[OB] Lead Generation 프로그램 결과</description>
    <inlineHelpText>부적합 사유, 대여문자 발송, 적합여부, Lead CC종류, 특이사항 등</inlineHelpText>
    <label>Lead Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>