force-app/main/default/objects/Case/fields/KDCE_OB_LeadType__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_LeadType__c</fullName>
    <label>Lead 고객유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KDCE_OB_ConsumerType</valueSetName>
    </valueSet>
</CustomField>