force-app/main/default/objects/Case/fields/KDCE_OB_OnHold__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_OnHold__c</fullName>
    <inlineHelpText>Rental +13, Rental +21</inlineHelpText>
    <label>보류 - 통화 결과</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>통화 완료</fullName>
            </value>
            <value>
                <fullName>통화 중단</fullName>
            </value>
            <value>
                <fullName>통화 미진행</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>