force-app/main/default/objects/Case/fields/KDCE_OB_PurchaseDeclined__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_PurchaseDeclined__c</fullName>
    <inlineHelpText>Rental +13</inlineHelpText>
    <label>구매 거부 사유</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KDCE_OB_RejectReason</valueSetName>
    </valueSet>
</CustomField>