force-app/main/default/objects/Case/fields/KDCE_OB_RegistrationReason__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_RegistrationReason__c</fullName>
    <inlineHelpText>Rental +1</inlineHelpText>
    <label>대여 신청 경로</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>F2F</fullName>
            </value>
            <value>
                <fullName>고장</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
            <value>
                <fullName>보증만료</fullName>
            </value>
            <value>
                <fullName>분실</fullName>
            </value>
            <value>
                <fullName>아이코스 문자</fullName>
            </value>
            <value>
                <fullName>아이코스 카카오톡</fullName>
            </value>
            <value>
                <fullName>인터넷</fullName>
            </value>
            <value>
                <fullName>저렴한 가격</fullName>
            </value>
            <value>
                <fullName>지인추천</fullName>
            </value>
            <value>
                <fullName>추가구매</fullName>
            </value>
            <value>
                <fullName>파손</fullName>
            </value>
            <value>
                <fullName>편의점</fullName>
            </value>
            <value>
                <fullName>호기심</fullName>
            </value>
            <value>
                <fullName>금연</fullName>
            </value>
            <value>
                <fullName>사유없음</fullName>
            </value>
            <value>
                <fullName>냄새적음</fullName>
            </value>
            <value>
                <fullName>연초 줄이기 위해</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>