force-app/main/default/objects/Case/fields/KDCE_OB_RejectReason__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_RejectReason__c</fullName>
    <label>OB Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCR_SubType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>KDCE_OB_RejectReason</valueSetName>
    </valueSet>
</CustomField>