force-app/main/default/objects/Case/fields/KDCE_OB_RentalComment__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_RentalComment__c</fullName>
    <description>[OB] Rental 프로그램 결과</description>
    <inlineHelpText>CC 종류, 사용자 타입, OB 진행여부, 1일차 결제 등</inlineHelpText>
    <label>Rental Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>