force-app/main/default/objects/Case/fields/KDCE_OB_Stage__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OB_Stage__c</fullName>
    <label>OB 단계</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCR_SubType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>KDCE_OB_Stage</valueSetName>
    </valueSet>
</CustomField>