force-app/main/default/objects/Case/fields/KDCE_OriginCaseNo__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OriginCaseNo__c</fullName>
    <label>Origin Case No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>