force-app/main/default/objects/Case/fields/KDCE_OutboundProgram__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OutboundProgram__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>아웃바운드 프로그램</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>사례</relationshipLabel>
    <relationshipName>Case_OB_Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>