force-app/main/default/objects/Case/fields/KDCE_ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ProductDescription__c</fullName>
    <label>Product Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>KDCE_BrandDifferentiator__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EHC1 HEETS BLUESELE MNT S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 HEETS GREENSE MNT S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 HEETS SILVSEL S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 HEETS AMBERSEL S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 HEETS PURPWA MNT S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 HEETS GREEN ZING MNT S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 HEETS TURQSEL MNT S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 HEETS GOLDSELC MNT S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 HEETS BRONZESE S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 HEETS CEDARSEL S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 HEETS SUMMERBR MNT S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 H1 AMMIL MNT S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 H1 NOOR S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 H1 YUGEN MNT S50 PRI 20 SLI</fullName>
            </value>
            <value>
                <fullName>EHC1 HEETS MNT S50 PRI 20 SLI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>