force-app/main/default/objects/Case/fields/KDCE_ProgramCode__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ProgramCode__c</fullName>
    <label>Program Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General (일반)</fullName>
                <default>true</default>
                <label>General (일반)</label>
            </value>
            <value>
                <fullName>ON</fullName>
            </value>
            <value>
                <fullName>UP</fullName>
            </value>
            <value>
                <fullName>Rental (대여)</fullName>
            </value>
            <value>
                <fullName>Outbound Program</fullName>
            </value>
            <value>
                <fullName>Remote Coach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>