force-app/main/default/objects/Case/fields/KDCE_ProgramSubCode__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ProgramSubCode__c</fullName>
    <label>Program Sub Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CCR_SubjectCodeNew__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>보상판매</fullName>
            </value>
            <value>
                <fullName>MGM</fullName>
            </value>
            <value>
                <fullName>추가구매</fullName>
            </value>
            <value>
                <fullName>특별구매</fullName>
            </value>
            <value>
                <fullName>시즌 프로모션</fullName>
            </value>
            <value>
                <fullName>매장문의</fullName>
            </value>
            <value>
                <fullName>기기관련</fullName>
            </value>
            <value>
                <fullName>고객이외 통화</fullName>
            </value>
            <value>
                <fullName>이전 통화자 요청</fullName>
            </value>
            <value>
                <fullName>부재중 문의</fullName>
            </value>
            <value>
                <fullName>단순 교환 절차</fullName>
            </value>
            <value>
                <fullName>업그레이드</fullName>
            </value>
            <value>
                <fullName>신규할인</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>