force-app/main/default/objects/Case/fields/KDCE_QureContactPhone__c.field-meta.xml
<CustomField>
    <fullName>KDCE_QureContactPhone__c</fullName>
    <description>QURE에서 고객이 입력하는 번호를 저장하기 위한 필드</description>
    <label>KDCE_QureContactPhone</label>
    <type>Phone</type>
</CustomField>