force-app/main/default/objects/Case/recordTypes/AE_FollowUp.recordType-meta.xml
<RecordType>
    <fullName>AE_FollowUp</fullName>
    <active>true</active>
    <businessProcess>Case Status</businessProcess>
    <label>AE Follow Up</label>
</RecordType>