force-app/main/default/objects/Case/recordTypes/CCR_AdverseEvent.recordType-meta.xml
<RecordType>
    <fullName>CCR_AdverseEvent</fullName>
    <active>true</active>
    <businessProcess>Case Status</businessProcess>
    <description>When customer reports that an Adverse Event was experienced</description>
    <label>6-Adverse Event</label>
</RecordType>