force-app/main/default/objects/Case/recordTypes/CCR_ECommerceOrderOnBehalf.recordType-meta.xml
<RecordType>
    <fullName>CCR_ECommerceOrderOnBehalf</fullName>
    <active>true</active>
    <businessProcess>Case Status</businessProcess>
    <description>Questions related to online orders or if customer wants to place a new order</description>
    <label>2-Orders/Order On Behalf</label>
</RecordType>