force-app/main/default/objects/Case/recordTypes/CCR_HolderChargerAccessory.recordType-meta.xml
<RecordType>
    <fullName>CCR_HolderChargerAccessory</fullName>
    <active>true</active>
    <businessProcess>Case Status</businessProcess>
    <description>Case related to devices or accessories, only used when Asset codentify is unavailable (if codentify is available, start &quot;New asset case&quot; directly from the Asset detail screen</description>
    <label>3-Holder/Charger/Accessory</label>
</RecordType>