force-app/main/default/objects/Case/recordTypes/CCR_InquiryCriticalInquiries.recordType-meta.xml
<RecordType>
    <fullName>CCR_InquiryCriticalInquiries</fullName>
    <active>true</active>
    <businessProcess>Case Status</businessProcess>
    <description>Questions related to General inquiries or Critical inquiries (not related to Adverse Events)</description>
    <label>1-Inquiry/Critical Inquiry</label>
</RecordType>