force-app/main/default/objects/Case/recordTypes/CCR_NewHeatStick.recordType-meta.xml
<RecordType>
    <fullName>CCR_NewHeatStick</fullName>
    <active>true</active>
    <businessProcess>Case Status</businessProcess>
    <description>New case for Heatstick</description>
    <label>7-HeatStick</label>
</RecordType>