force-app/main/default/objects/Case/recordTypes/CCR_ProgramSupport.recordType-meta.xml
<RecordType>
    <fullName>CCR_ProgramSupport</fullName>
    <active>false</active>
    <businessProcess>Case Status</businessProcess>
    <description>Cases covering sentiment management, up/cross sell and resolution campaigns</description>
    <label>8-Program Support</label>
</RecordType>