force-app/main/default/objects/Case/recordTypes/CCR_QoachProgram.recordType-meta.xml
<RecordType>
    <fullName>CCR_QoachProgram</fullName>
    <active>false</active>
    <businessProcess>Case Status</businessProcess>
    <description>For Qoach Programs</description>
    <label>Qoach Program</label>
</RecordType>