force-app/main/default/objects/Case/recordTypes/KDCE_OutboundProgram.recordType-meta.xml
<RecordType>
    <fullName>KDCE_OutboundProgram</fullName>
    <active>true</active>
    <businessProcess>Case Status</businessProcess>
    <description>[KDCE] Outbound Program</description>
    <label>Outbound Program</label>
</RecordType>