force-app/main/default/objects/Case/validationRules/Validate_KDCE_SendNPS.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_KDCE_SendNPS</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISCHANGED(Status), ISPICKVAL(Status,&quot;Closed&quot;), ISPICKVAL( KDCE_SendNPS__c, &quot;Yes&quot; ),
				OR( ISPICKVAL(CCR_SubjectCodeNew__c, &quot;CI001&quot; ),
							ISPICKVAL(CCR_SubjectCodeNew__c, &quot;CI002&quot; ),
							ISPICKVAL(CCR_SubjectCodeNew__c, &quot;CI003&quot; ),
							ISPICKVAL(CCR_SubjectCodeNew__c, &quot;CI005&quot; ),
							ISPICKVAL(CCR_SubjectCodeNew__c, &quot;CI006&quot; ),
							ISPICKVAL(CCR_SubjectCodeNew__c, &quot;CI007&quot; ),
							ISPICKVAL(CCR_SubjectCodeNew__c, &quot;CI008&quot; ),
							ISPICKVAL(CCR_SubjectCodeNew__c, &quot;CI009&quot; ),
							ISPICKVAL(CCR_SubjectCodeNew__c, &quot;CI010&quot; ))
				)</errorConditionFormula>
    <errorDisplayField>KDCE_SendNPS__c</errorDisplayField>
    <errorMessage>The field value should be set to &quot;No&quot;.</errorMessage>
</ValidationRule>