force-app/main/default/objects/Case/listViews/All_Email_to_Cases.listView-meta.xml
<ListView>
    <fullName>All_Email_to_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CCR_Verbatim__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Email</value>
    </filters>
    <label>All Email to Cases</label>
</ListView>