force-app/main/default/objects/Case/listViews/Kakao_Chat_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Kakao_Chat_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Kakao Chat Queue</label>
    <queue>Kakao_Chat_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>