force-app/main/default/objects/Case/listViews/QA_Evalution.listView-meta.xml
<ListView>
    <fullName>QA_Evalution</fullName>
    <columns>KDCE_fm_CaseCreationTimeFrame__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KDCE_fm_CaseCreationTimeFrame__c</field>
        <operation>contains</operation>
        <value>2021.7.18</value>
    </filters>
    <label>QA_Evalution</label>
</ListView>