force-app/main/default/objects/Case/listViews/Transfer_Kakao_Case.listView-meta.xml
<ListView>
    <fullName>Transfer_Kakao_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Transfer (Kakao)</label>
    <queue>Transfer_Kakao</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>