force-app/main/default/objects/Case/listViews/W2C_E2C_Queue_Case.listView-meta.xml
<ListView>
    <fullName>W2C_E2C_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Web/Email Queue</label>
    <queue>W2C_E2C_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>